--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
+    "@distube/spotify": "^0.6.3",
     "ascii-table": "0.0.9",
     "colon-notation": "^1.2.1",
     "discord.js": "^12.5.3",
