--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ascii-table": "0.0.9",
     "colon-notation": "^1.2.1",
     "discord.js": "^12.5.3",
+    "discord.js-pagination": "^1.0.3",
     "distube": "^2.8.18",
     "dotenv": "^10.0.0",
     "ffmpeg-static": "^4.4.0",
