--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
-    "@distube/spotify": "^0.6.3",
     "ascii-table": "0.0.9",
     "colon-notation": "^1.2.1",
     "discord.js": "^12.5.3",
@@ -23,6 +22,7 @@
     "ffmpeg-static": "^4.4.0",
     "mathjs": "^9.4.4",
     "spotify-to-yt": "^1.0.5",
-    "string-progressbar": "^1.0.4"
+    "string-progressbar": "^1.0.4",
+    "ytdl-core": "^4.9.1"
   }
 }
