--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "distube": "^2.8.18",
     "dotenv": "^10.0.0",
     "ffmpeg-static": "^4.4.0",
+    "lyrics-finder": "^21.7.0",
     "mathjs": "^9.4.4",
     "mongoose": "^6.0.8",
     "spotify-to-yt": "^1.0.5",
