--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
+    "@sujalgoel/lyrics-finder": "^1.0.0",
     "ascii-table": "0.0.9",
     "colon-notation": "^1.2.1",
     "discord.js": "^12.5.3",
@@ -25,7 +26,6 @@
     "mongoose": "^6.0.8",
     "spotify-to-yt": "^1.0.5",
     "string-progressbar": "^1.0.4",
-    "yt-lirik": "^1.0.0",
     "ytdl-core": "^4.9.1"
   }
 }
