--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lyrics-finder": "^21.7.0",
     "mathjs": "^9.4.4",
     "mongoose": "^6.0.8",
+    "node-schedule": "^2.1.0",
     "spotify-to-yt": "^1.0.5",
     "string-progressbar": "^1.0.4",
     "ytdl-core": "^4.9.1"
